Fix headerbar and categories on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -514,7 +514,7 @@ button {
   }
   .headerNav {
     margin: 0;
-    height: 8vh;
+    height: 10vh;
     justify-content: space-evenly;
   }
 
